fix clipping logo

--- a/dragonbrain/src/main/resources/static/css/index.css
+++ b/dragonbrain/src/main/resources/static/css/index.css
@@ -20,5 +20,6 @@
 #logo {
     width: 500px;
     height: 500px;
+    max-width: 100%;
     object-fit: contain;
 }
